fix: changing deactivateBatch route to ceactivateTeam
