# docs/swagger.json
@@ -325,9 +325,9 @@
                 }
             }
         },
-        "/users/deactivateBatch": {
+        "/users/deactivateTeam": {
             "post": {
-                "description": "Быстрый метод для массовой деактивации пользователей",
+                "description": "Быстрый метод для массовой деактивации членов определенной команды",
                 "consumes": [
                     "application/json"
                 ],
@@ -337,15 +337,15 @@
                 "tags": [
                     "Users"
                 ],
-                "summary": "Массовая деактивация пользователей",
+                "summary": "Деактивация всех членов команды",
                 "parameters": [
                     {
-                        "description": "User to deactivate user_id's list",
+                        "description": "Team to deactivate name",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_controller_http_v1.deactivateBatchRequest"
+                            "$ref": "#/definitions/internal_controller_http_v1.deactivateTeamRequest"
                         }
                     }
                 ],
@@ -353,11 +353,17 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_MatTwix_Pull-Request-Assigner_internal_service.UserSetIsActiveBatchOutput"
+                            "$ref": "#/definitions/github_com_MatTwix_Pull-Request-Assigner_internal_service.UserSetIsActiveTeamOutput"
                         }
                     },
                     "400": {
                         "description": "Неверное тело запроса",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_http_v1.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Команда не найдена",
                         "schema": {
                             "$ref": "#/definitions/internal_controller_http_v1.ErrorResponse"
                         }
@@ -674,14 +680,6 @@
                 }
             }
         },
-        "github_com_MatTwix_Pull-Request-Assigner_internal_service.UserSetIsActiveBatchOutput": {
-            "type": "object",
-            "properties": {
-                "users_updated": {
-                    "type": "integer"
-                }
-            }
-        },
         "github_com_MatTwix_Pull-Request-Assigner_internal_service.UserSetIsActiveOutput": {
             "type": "object",
             "properties": {
@@ -704,6 +702,14 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "github_com_MatTwix_Pull-Request-Assigner_internal_service.UserSetIsActiveTeamOutput": {
+            "type": "object",
+            "properties": {
+                "users_updated": {
+                    "type": "integer"
                 }
             }
         },
@@ -763,17 +769,14 @@
                 }
             }
         },
-        "internal_controller_http_v1.deactivateBatchRequest": {
+        "internal_controller_http_v1.deactivateTeamRequest": {
             "type": "object",
             "required": [
-                "user_ids"
+                "team_name"
             ],
             "properties": {
-                "user_ids": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                "team_name": {
+                    "type": "string"
                 }
             }
         },
