# internal/controller/http/v1/user.go
@@ -106,41 +106,48 @@ func (ur *userRoutes) getReview(w http.ResponseWriter, r *http.Request) {
 	newSuccessResponse(w, http.StatusOK, pullRequests)
 }
 
-type deactivateBatchRequest struct {
-	UserIDs []string `json:"user_ids" validate:"required"`
+type deactivateTeamRequest struct {
+	TeamName string `json:"team_name" validate:"required"`
 }
 
-// @Summary Массовая деактивация пользователей
-// @Description Быстрый метод для массовой деактивации пользователей
+// @Summary Деактивация всех членов команды
+// @Description Быстрый метод для массовой деактивации членов определенной команды
 // @Tags Users
 // @Accept json
 // @Produce json
-// @Param request body deactivateBatchRequest true "User to deactivate user_id's list"
-// @Success 200 {object} service.UserSetIsActiveBatchOutput
+// @Param request body deactivateTeamRequest true "Team to deactivate name"
+// @Success 200 {object} service.UserSetIsActiveTeamOutput
 // @Failure 400 {object} ErrorResponse "Неверное тело запроса"
+// @Failure 404 {object} ErrorResponse "Команда не найдена"
 // @Failure 500 {object} ErrorResponse "Внутренняя ошибка сервера"
-// @Router /users/deactivateBatch [post]
-func (ur *userRoutes) deactivateBatch(w http.ResponseWriter, r *http.Request) {
-	var req deactivateBatchRequest
+// @Router /users/deactivateTeam [post]
+func (ur *userRoutes) deactivateTeam(w http.ResponseWriter, r *http.Request) {
+	var req deactivateTeamRequest
 
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
 		newErrorResponse(w, http.StatusBadRequest, CodeBadRequest, "invalid request body")
 		return
 	}
 
-	if err := utils.ValidateStruct(req); err != nil || len(req.UserIDs) == 0 {
+	if err := utils.ValidateStruct(req); err != nil || req.TeamName == "" {
 		newErrorResponse(w, http.StatusBadRequest, CodeBadRequest, "invalid request body")
 		return
 	}
 
-	usersDeactivated, err := ur.userService.SetIsActiveBatch(r.Context(), req.UserIDs, false)
+	usersDeactivated, err := ur.userService.SetIsActiveTeam(r.Context(), req.TeamName, false)
 	if err != nil {
-		newErrorResponse(w, http.StatusInternalServerError, CodeInternalServerError, "failed to deactivate users")
-		ur.logger.Error("failed to deactivate users", map[string]any{
-			"user_ids_amount": len(req.UserIDs),
-			"error":           err,
-		})
-		return
+		switch err {
+		case repoerrs.ErrNotFound:
+			newErrorResponse(w, http.StatusNotFound, CodeNotFound, err.Error())
+			return
+		default:
+			newErrorResponse(w, http.StatusInternalServerError, CodeInternalServerError, "failed to deactivate users")
+			ur.logger.Error("failed to deactivate users", map[string]any{
+				"team_name": len(req.TeamName),
+				"error":     err,
+			})
+			return
+		}
 	}
 
 	newSuccessResponse(w, http.StatusOK, usersDeactivated)
